<resources>
    <string name="app_name">Android Application Development</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Unit1_head">Scroll down to explore all topics from Unit I</string>
    <string name="rate_the_app">Rate this App:</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="show_hide_progress">Show/Hide Progress:</string>
    <string name="toggle_progressbar">Toggle ProgressBar</string>
    <string name="show_custom_toast">Show Custom Toast</string>
    <string name="footer_section">--- Footer Section ---</string>
</resources>